--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://deshyam01.github.io/ZapQuiz/Home",
+  "homepage": ".",
   "name": "docs",
   "version": "0.1.0",
   "private": false,
